fixed footer, nav, sections

--- a/views/home.html
+++ b/views/home.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <img src="/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
-        <p>Lugar para poner barra de búsqueda</p>
+        <div>Lugar para poner barra de búsqueda</div>
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
-        <br>
+        <nav>
         <ul>
             <li><a href="#Ofertas">Ofertas</a></li>
             <li><a href="#Tiendas Oficiales">Tiendas Oficiales</a></li>
@@ -23,10 +23,11 @@
             <li><a href="#Ingresá">Ingresá</a></li>
             <li><a href="#Mis compras">Mis compras</a></li>
         </ul>
+        </nav>
       </header>
     
     <main>
-        <div class="home-banner"><img src="/images/img-home-banner.jpg" alt="img-home-banner" width="320px"></div>
+        <section><div class="home-banner"><img src="/images/img-home-banner.jpg" alt="img-home-banner" width="320px"></div></section>
 
         <div class="container"><h2>Basado en tu última visita</h2>
             <div class="box-item"><img src="/images/img-cafetera-moulinex.jpg" alt="img-item" width="320px">
@@ -53,7 +54,7 @@
             <p>5% OFF</p>
             <h3>SmartTv Samsung 43"</h3></div>
         </div>
-        <br>
+        
         <div class="container"><h2>Sección de Ofertas</h2>
             <div class="box-item"><img src="/images/img-cafetera-moulinex.jpg" alt="img-item" width="320px">
             
@@ -80,23 +81,23 @@
             <h3>SmartTv Samsung 43"</h3></div>
         </div>
     </main>
-    <br>
+    
     <footer>
-        <div class="footer-item-box">
+        <article class="footer-item-box">
             <h4>Pagá con tarjeta o en efectivo</h4>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
-        </div>
-        <div class="footer-item-box">
+        </article>
+        <article class="footer-item-box">
             <h4>Envío gratis desde $ 2.500</h4>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos.</p>
-        </div>
-        <div class="footer-item-box">
+        </article>
+        <article class="footer-item-box">
             <h4>Seguridad, de principio a fin</h4>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
-        </div>
-        <div class="footer-item-box">
+        </article>
+        <article class="footer-item-box">
             <h4>Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
-        </div>
+        </article>
     </footer>
 </body>
 </html>
